src/main/java/com/example/DiplomaSite/error/TeacherCreationException.java
package com.example.DiplomaSite.error;

public class TeacherCreationException extends RuntimeException{
    public TeacherCreationException(String message, Throwable cause) {
        super(message, cause);
    }
}
